--- a/main.css
+++ b/main.css
@@ -1,7 +1,5 @@
 /* Remove the navbar's default margin-bottom and rounded borders */ 
-body {
-      position: relative; 
-  }
+
 
 .navbar {
   margin-bottom: 0;
@@ -27,10 +25,16 @@ body {
   height:500px;
 }
 
-#contact {
-  padding-top:50px;
-  height:500px;
+.navbar .navbar-nav{
+    display: inline-block;
+    float: none;
 }
+
+.navbar .navbar-collapse{
+    margin-left: 200px;
+    margin-right: 250px;
+}
+
 
 /* Set black background color, white text and some padding */
 footer {
@@ -38,7 +42,10 @@ footer {
   color: white;
   padding: 15px;
 }
-
+footer a:link, footer a:visited{
+  color: #FF0D35;
+  
+}
 /* On small screens, set height to 'auto' for sidenav and grid */
 @media screen and (max-width: 767px) {
   .sidenav {
